--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react-native-screens": "~2.9.0",
     "react-native-tab-view": "^2.14.4",
     "react-native-web": "~0.11.7",
-    "expo-sqlite": "~8.2.1"
+    "expo-sqlite": "~8.2.1",
+    "@react-native-community/async-storage": "~1.11.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
