--- a/package.json
+++ b/package.json
@@ -8,13 +8,15 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "~1.11.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.7.0",
     "@react-navigation/material-top-tabs": "^5.2.13",
     "@react-navigation/native": "^5.7.0",
     "@react-navigation/stack": "^5.7.0",
-    "expo": "~38.0.8",
+    "expo": "^38.0.8",
     "expo-constants": "~9.1.1",
+    "expo-sqlite": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "moment": "^2.27.0",
     "react": "~16.11.0",
@@ -26,8 +28,7 @@
     "react-native-screens": "~2.9.0",
     "react-native-tab-view": "^2.14.4",
     "react-native-web": "~0.11.7",
-    "expo-sqlite": "~8.2.1",
-    "@react-native-community/async-storage": "~1.11.0"
+    "expo-font": "~8.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
