--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^5.7.0",
     "expo": "^38.0.8",
     "expo-constants": "~9.1.1",
+    "expo-font": "~8.2.1",
     "expo-sqlite": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "moment": "^2.27.0",
@@ -27,12 +28,8 @@
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-tab-view": "^2.14.4",
-<<<<<<< HEAD
     "react-native-web": "~0.11.7",
-    "expo-font": "~8.2.1"
-=======
-    "react-native-web": "~0.11.7"
->>>>>>> 6a8dba7a969ab55c43f8c91d5e0e1d89d764f386
+    "@react-native-community/viewpager": "3.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
