--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-native-screens": "~2.9.0",
     "react-native-tab-view": "^2.14.4",
     "react-native-web": "~0.11.7",
-    "@react-native-community/viewpager": "3.3.0"
+    "@react-native-community/viewpager": "3.3.0",
+    "expo-notifications": "~0.3.3",
+    "expo-permissions": "~9.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
