--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-community/async-storage": "~1.11.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/viewpager": "3.3.0",
     "@react-navigation/bottom-tabs": "^5.7.0",
     "@react-navigation/material-top-tabs": "^5.2.13",
     "@react-navigation/native": "^5.7.0",
@@ -17,6 +18,8 @@
     "expo": "^38.0.8",
     "expo-constants": "~9.1.1",
     "expo-font": "~8.2.1",
+    "expo-notifications": "^0.3.3",
+    "expo-permissions": "~9.0.1",
     "expo-sqlite": "~8.2.1",
     "expo-status-bar": "^1.0.2",
     "moment": "^2.27.0",
@@ -28,10 +31,7 @@
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
     "react-native-tab-view": "^2.14.4",
-    "react-native-web": "~0.11.7",
-    "@react-native-community/viewpager": "3.3.0",
-    "expo-notifications": "~0.3.3",
-    "expo-permissions": "~9.0.1"
+    "react-native-web": "~0.11.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
