api changes for login and register module

--- a/app.json
+++ b/app.json
@@ -20,6 +20,18 @@
     },
     "web": {
       "favicon": "./app/assets/favicon.png"
+    },
+    "hooks": {
+      "postPublish": [
+        {
+          "file": "sentry-expo/upload-sourcemaps",
+          "config": {
+            "organization": "your team short name here",
+            "project": "your project short name here",
+            "authToken": "your auth token here"
+          }
+        }
+      ]
     }
   }
 }
