--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "~1.11.0",
+    "@react-native-community/datetimepicker": "^2.6.1",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-community/viewpager": "3.3.0",
     "@react-navigation/bottom-tabs": "^5.7.0",
@@ -17,8 +18,10 @@
     "@react-navigation/stack": "^5.7.0",
     "axios": "^0.19.2",
     "expo": "^38.0.8",
+    "expo-calendar": "~8.2.1",
     "expo-constants": "~9.1.1",
     "expo-font": "~8.2.1",
+    "expo-localization": "~8.2.1",
     "expo-notifications": "^0.3.3",
     "expo-permissions": "~9.0.1",
     "expo-sqlite": "~8.2.1",
@@ -30,7 +33,10 @@
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-appearance": "~0.3.3",
+    "react-native-calendar-strip": "^2.0.9",
+    "react-native-calendars": "^1.308.0",
     "react-native-gesture-handler": "~1.6.0",
+    "react-native-modal-datetime-picker": "^8.9.1",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
