--- a/package.json
+++ b/package.json
@@ -43,7 +43,9 @@
     "react-native-tab-view": "^2.14.4",
     "react-native-web": "~0.11.7",
     "sentry-expo": "^2.1.2",
-    "yup": "^0.29.3"
+    "yup": "^0.29.3",
+    "expo-google-sign-in": "~8.2.1",
+    "expo-app-auth": "~9.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
