--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "@react-navigation/stack": "^5.7.0",
     "axios": "^0.19.2",
     "expo": "^38.0.8",
+    "expo-app-auth": "^9.1.1",
     "expo-calendar": "~8.2.1",
     "expo-constants": "~9.1.1",
     "expo-font": "~8.2.1",
+    "expo-google-sign-in": "^8.2.1",
     "expo-localization": "~8.2.1",
     "expo-notifications": "^0.3.3",
     "expo-permissions": "~9.0.1",
@@ -43,9 +45,7 @@
     "react-native-tab-view": "^2.14.4",
     "react-native-web": "~0.11.7",
     "sentry-expo": "^2.1.2",
-    "yup": "^0.29.3",
-    "expo-google-sign-in": "~8.2.1",
-    "expo-app-auth": "~9.1.1"
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
