--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
   },
   "dependencies": {
     "@react-native-community/async-storage": "~1.11.0",
-    "@react-native-community/datetimepicker": "^2.6.1",
+    "@react-native-community/datetimepicker": "2.6.2",
     "@react-native-community/masked-view": "0.1.10",
-    "@react-native-community/viewpager": "3.3.0",
+    "@react-native-community/viewpager": "^3.3.0",
     "@react-navigation/bottom-tabs": "^5.7.0",
     "@react-navigation/material-top-tabs": "^5.2.13",
     "@react-navigation/native": "^5.7.0",
@@ -19,11 +19,11 @@
     "axios": "^0.19.2",
     "expo": "^38.0.8",
     "expo-app-auth": "^9.1.1",
-    "expo-calendar": "~8.2.1",
+    "expo-calendar": "^8.2.2",
     "expo-constants": "~9.1.1",
     "expo-font": "~8.2.1",
     "expo-google-sign-in": "^8.2.1",
-    "expo-localization": "~8.2.1",
+    "expo-localization": "^8.2.1",
     "expo-notifications": "^0.3.3",
     "expo-permissions": "~9.0.1",
     "expo-sqlite": "~8.2.1",
@@ -34,14 +34,20 @@
     "react": "~16.11.0",
     "react-dom": "~16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
+    "react-native-animated-circular-progress": "^1.0.4",
     "react-native-appearance": "~0.3.3",
     "react-native-calendar-strip": "^2.0.9",
-    "react-native-calendars": "^1.308.0",
+    "react-native-calendars": "^1.314.0",
+    "react-native-circular-progress": "^1.3.6",
+    "react-native-dropdown-picker": "^3.1.11",
     "react-native-gesture-handler": "~1.6.0",
-    "react-native-modal-datetime-picker": "^8.9.1",
+    "react-native-material-dropdown": "^0.11.1",
+    "react-native-modal-datetime-picker": "^8.9.3",
+    "react-native-pie": "^1.1.2",
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
+    "react-native-svg": "^12.1.0",
     "react-native-tab-view": "^2.14.4",
     "react-native-web": "~0.11.7",
     "sentry-expo": "^2.1.2",
